# blue-pill.rs

./: .gitignore  Cargo.toml  Makefile  openocd.cfg  openocd.gdb
.cargo/: config
gdb/: vscode.gdb
src/: lib.rs  main.rs
