[package]
name = "blue-pill"
version = "0.0.1"
authors = ["Ryan Hartlage <ryanplusplus@gmail.com>"]
edition = "2018"

[dependencies]
stm32f1xx-hal = { version = "0.2", features = ["rt", "stm32f103"] }
cortex-m = "0.5"
cortex-m-rt = { version = "0.6.6", features = ["device"] }
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5"
